# toy-payments-engine

./: Cargo.toml  README.md  accounts.csv  transactions.csv
resources/test-examples/expected/: accounts_1.csv  accounts_4.csv  accounts_5.csv  accounts_6.csv  accounts_7.csv
resources/test-examples/inputs/: transactions_1.csv  transactions_2.csv  transactions_3.csv  transactions_4.csv  transactions_5.csv  transactions_6.csv  transactions_7.csv
src/: args.rs  config.rs  main.rs  reader.rs  writer.rs
src/tpe/: account_report.rs  input.rs  ledger.rs  lib.rs  money.rs  result.rs  transaction.rs
src/tpe/events/: charge_back_event.rs  deposit_event.rs  dispute_event.rs  mod.rs  resolve_event.rs  withdrawal_event.rs
src/tpe/ids/: client_id.rs  mod.rs  transaction_id.rs
src/tpe/models/: account.rs  account_report.rs  mod.rs  snapshot.rs
src/tpe/models/transactions/: mod.rs  state.rs  transaction.rs  transactions.rs  type.rs
src/tpe/money/: mod.rs
src/tpe/services/: account_service.rs  mod.rs  transaction_service.rs
src/tpe/snapshots/: account_snapshot.rs  account_snapshots.rs  mod.rs
tests/: integration.rs
