[package]
name = "toy-payments-engine"
version = "0.1.1"
edition = "2021"

[lib]
name = "tpe" # tpe: toy payments engine
path = "src/tpe/lib.rs"

[dependencies]
anyhow = "1.0.63"
csv = "1.1.6"
log = "0.4.17"
serde = { version = "1.0.144", features = ["derive"] }
simple_logger = { version = "2.3.0", features = ["stderr"] }
thiserror = "1.0.33"

